WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
223075
[macOS] Selecting text via mouse drag in image documents shouldn't trigger click events
https://bugs.webkit.org/show_bug.cgi?id=223075
Summary
[macOS] Selecting text via mouse drag in image documents shouldn't trigger cl...
Wenson Hsieh
Reported
2021-03-11 09:52:54 PST
.
Attachments
Patch
(3.21 KB, patch)
2021-03-11 14:57 PST
,
Wenson Hsieh
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
v2 (w/ tests)
(10.85 KB, patch)
2021-03-14 20:17 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2021-03-11 14:57:40 PST
Created
attachment 422976
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2021-03-11 14:58:00 PST
<
rdar://problem/75334611
>
Wenson Hsieh
Comment 3
2021-03-11 15:46:19 PST
Comment on
attachment 422976
[details]
Patch Thanks for the review!
EWS
Comment 4
2021-03-11 15:55:45 PST
Committed
r274305
: <
https://commits.webkit.org/r274305
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 422976
[details]
.
Aakash Jain
Comment 5
2021-03-12 06:22:31 PST
(In reply to EWS from
comment #4
)
> Committed
r274305
: <
https://commits.webkit.org/r274305
>
This seems to have broken multiple layout tests on mac-debug. e.g.:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&test=editing%2Fselection%2Fselection-across-shadow-boundaries-mixed-editability-2.html&test=editing%2Fselection%2Fselection-across-shadow-boundaries-mixed-editability-3.html&test=editing%2Fselection%2Fselection-across-shadow-boundaries-readonly-2.html&style=debug
Aakash Jain
Comment 6
2021-03-12 06:23:09 PST
Crash:
https://ews-build.s3-us-west-2.amazonaws.com/macOS-Catalina-Debug-WK1-Tests-EWS/r423011-3298-rerun/editing/selection/selection-across-shadow-boundaries-mixed-editability-3-crash-log.txt
stderr: ASSERTION FAILED: !shadowRoot() || shadowRoot()->mode() == ShadowRootMode::UserAgent ./dom/Element.cpp(2447) : RefPtr<WebCore::ShadowRoot> WebCore::Element::userAgentShadowRoot() const 1 0x10fb778e9 WTFCrash 2 0x12cbcbd4b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x12fc60701 WebCore::Element::userAgentShadowRoot() const 4 0x130098307 WebCore::HTMLElement::isImageOverlayText(WebCore::Node const&) 5 0x130a4a4e0 WebCore::EventHandler::updateSelectionForMouseDrag(WebCore::HitTestResult const&) 6 0x130a48c97 WebCore::EventHandler::handleMouseDraggedEvent(WebCore::MouseEventWithHitTestResults const&, WebCore::CheckDragHysteresis)
WebKit Commit Bot
Comment 7
2021-03-12 06:24:18 PST
Re-opened since this is blocked by
bug 223119
Wenson Hsieh
Comment 8
2021-03-14 20:17:30 PDT
Created
attachment 423140
[details]
v2 (w/ tests)
EWS
Comment 9
2021-03-15 06:36:56 PDT
Committed
r274420
: <
https://commits.webkit.org/r274420
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 423140
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug