[macOS] Selecting text via mouse drag in image documents shouldn't trigger click events https://bugs.webkit.org/show_bug.cgi?id=223075 <rdar://problem/75334611>

Reviewed by Tim Horton.

Source/WebCore:

Improve image overlay support in image documents, by setting `-webkit-user-select: text;` on the image overlay
container and `cursor: text;` on each of the text children. Additionally, make it so that text selection in
image overlays doesn't trigger a click event, so that attempting to select text doesn't trigger click events.

Tests: fast/images/image-extraction/mac/select-image-overlay-with-mouse-drag-does-not-fire-click.html
       fast/images/image-extraction/mac/select-image-overlay-with-mouse-drag.html

* html/HTMLElement.cpp:
(WebCore::HTMLElement::isImageOverlayText):

Make a slight adjustment here to handle the case where the host element's shadow root is not installed by the
user agent, and also so that we return `true` for all nodes underneath the image overlay container as well (not
just text nodes). See `DragController` change below for more details.

(WebCore::HTMLElement::updateWithImageExtractionResult):
* page/DragController.cpp:
(WebCore::DragController::draggableElement const):

Make another adjustment to `DragController::draggableElement`, such that we don't initiate image drags when
dragging over text inside the image overlay. Note that this does not prevent drag start when the text is
selected, since that does not result in an image drag (i.e., `DragSourceAction::Image`).

* page/EventHandler.cpp:
(WebCore::EventHandler::updateSelectionForMouseDrag):

LayoutTests:

Add a couple of new layout tests to exercise the new behavior.

* fast/images/image-extraction/mac/select-image-overlay-with-mouse-drag-does-not-fire-click-expected.txt: Added.
* fast/images/image-extraction/mac/select-image-overlay-with-mouse-drag-does-not-fire-click.html: Added.
* fast/images/image-extraction/mac/select-image-overlay-with-mouse-drag-expected-mismatch.html: Added.
* fast/images/image-extraction/mac/select-image-overlay-with-mouse-drag.html: Added.


Canonical link: https://commits.webkit.org/235287@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274420 268f45cc-cd09-0410-ab3c-d52691b4dbfc